// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor.Absolute /> should match snapshot 1`] = `
<div>
  <a
    class="css-ho3rmb"
    href="https://example.com"
    referrerpolicy="no-referrer"
    target=""
  >
    <i
      class="material-icons-outlined css-oaddiw"
    >
      open_in_new
    </i>
    link
  </a>
</div>
`;

exports[`<Anchor.Absolute /> should render with no decoration 1`] = `
<div>
  <a
    class="css-1hqxz2g"
    href="https://example.com"
    referrerpolicy="no-referrer"
    target=""
  >
    <i
      class="material-icons-outlined css-oaddiw"
    >
      open_in_new
    </i>
    link
  </a>
</div>
`;
